@@ -114,6 +114,7 @@ export(makeBK1Function)
 export(makeBartelsConnFunction)
 export(makeBealeFunction)
 export(makeBentCigarFunction)
+export(makeBiSphereFunction)
 export(makeBirdFunction)
 export(makeBohachevskyN1Function)
 export(makeBoothFunction)
@@ -139,6 +140,7 @@ export(makeDTLZ6Function)
 export(makeDTLZ7Function)
 export(makeDeckkersAartsFunction)
 export(makeDeflectedCorrugatedSpringFunction)
+export(makeDentFunction)
 export(makeDixonPriceFunction)
 export(makeDoubleSumFunction)
 export(makeEasomFunction)
