@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/mof.bk1.R
+% Please edit documentation in R/mof.BK1.R
 \name{makeBK1Function}
 \alias{makeBK1Function}
 \title{BK1 function generator}
